--- a/public/templates/living.html
+++ b/public/templates/living.html
@@ -118,7 +118,7 @@ function setMarkers(map) {
         <h2>Hotell Lilton</h2> 
         <p>Detta hotell finner ni på järnvägsgatan mitt i centrala Ängelholm, bara ett stenkast från kyrkan. Lilton är ett litet familjärt hotell inyst i ett sekelskifteshus</p>
         <p><img src="images/Lilton.jpg" alt="Margretetorp" style="width:100%;height:100%;"></p>
-        <p><a target="_blank" class="btn btn-primary" href="http://www.hotell-lilton.se" role="button">Hotellets Hemsida &raquo;</a></p>      
+        <p><a target="_blank" class="btn btn-primary" href="http://www.hotel-lilton.se/" role="button">Hotellets Hemsida &raquo;</a></p>      
      </div>
       <div class="col-sm-4">
         <h2>Kvinnaböske Krog & Hotel</h2>
