Fixed missing for valhallpark

--- a/public/templates/church.html
+++ b/public/templates/church.html
@@ -82,7 +82,11 @@
     <div class="jumbotron">
       <h1>Ängelholms Kyrka</h1>
       <p class="lead">Ängelholms kyrka hittar ni mitt i hjärtat av staden. Den nuvarande kyrkan byggdes på 1700-talet på samma plats som kyrkan som danskarna brände ned 1565  <a href="https://www.svenskakyrkan.se/default.aspx?id=692189">Ängelholms Kyrka</a> </p>
-      <p><img src="images/angelholm_church.jpg" alt="Ängelholms Kyrka" style="width:100%;height:100%;"></p>
+      <p>    
+            <img class="logo visible-lg" src="images/Large/church_lg.jpg" alt="Church" style="width:100%;height:100%;">
+            <img class="logo visible-md" src="images/Medium/church_md.jpg" alt="Church" style="width:100%;height:100%;">
+            <img class="logo visible-sm visible-xs" src="images/Small/church_sm.jpg" alt="Church" style="width:100%;height:100%;">
+        </p>
     </div>
     <!-- Example row of columns -->
     <div class="row">
