--- a/public/templates/party.html
+++ b/public/templates/party.html
@@ -70,8 +70,8 @@ function setMarkers(map) {
       <p class="lead">Margretetorp finner ni på Hallandsåsens södra sluttning. På denna plats ska det ha funnits ett gästgiveri ända sedan 1300-talet  <a href="http://www.margretetorp.se">Margretetorp</a> </p>
         <p>
             <img class="logo visible-lg" src="images/large/margretetorp_lg.jpg" alt="Margretetorp" style="width:100%;height:100%;">
-            <img class="logo visible-sm" src="images/medium/margretetorp_md.jpg" alt="Margretetorp" style="width:100%;height:100%;">
-            <img class="logo visible-xs" src="images/small/margretetorp_sm.jpg" alt="Margretetorp" style="width:100%;height:100%;">
+            <img class="logo visible-md" src="images/medium/margretetorp_md.jpg" alt="Margretetorp" style="width:100%;height:100%;">
+            <img class="logo visible-sm visible-xs" src="images/small/margretetorp_sm.jpg" alt="Margretetorp" style="width:100%;height:100%;">
         </p>
     </div>
     <!-- Example row of columns -->
