--- a/public/templates/church.html
+++ b/public/templates/church.html
@@ -83,9 +83,9 @@
       <h1>Ängelholms Kyrka</h1>
       <p class="lead">Ängelholms kyrka hittar ni mitt i hjärtat av staden. Den nuvarande kyrkan byggdes på 1700-talet på samma plats som kyrkan som danskarna brände ned 1565  <a href="https://www.svenskakyrkan.se/default.aspx?id=692189">Ängelholms Kyrka</a> </p>
       <p>    
-            <img class="logo visible-lg" src="images/Large/church_lg.jpg" alt="Church" style="width:100%;height:100%;">
-            <img class="logo visible-md" src="images/Medium/church_md.jpg" alt="Church" style="width:100%;height:100%;">
-            <img class="logo visible-sm visible-xs" src="images/Small/church_sm.jpg" alt="Church" style="width:100%;height:100%;">
+            <img class="logo visible-lg" src="images/large/church_lg.jpg" alt="Church" style="width:100%;height:100%;">
+            <img class="logo visible-md" src="images/medium/church_md.jpg" alt="Church" style="width:100%;height:100%;">
+            <img class="logo visible-sm visible-xs" src="images/small/church_sm.jpg" alt="Church" style="width:100%;height:100%;">
         </p>
     </div>
     <!-- Example row of columns -->
