Rearranged text in living temaplate to have images above text

--- a/public/templates/living.html
+++ b/public/templates/living.html
@@ -83,34 +83,34 @@ function setMarkers(map) {
     <div class="row">
       <div class="col-sm-4">
         <h2>Valhall Park</h2>
-        <p>Valhall park finner ni strax väster om Ängelholm. Hotellet ingår i Coops hotellerbjudande och finns beläget på den gamla flygflotiljens område brevid Ängelholms flygplats</p>
         <p>    
             <img class="logo visible-lg" src="images/small/valhallpark_sm.jpg" alt="Valhallpark" style="width:100%;height:100%;">
             <img class="logo visible-md" src="images/small/valhallpark_sm.jpg" alt="Valhallpark" style="width:100%;height:100%;">
             <img class="logo logo visible-sm logo visible-sm logo visible-sm visible-xs" src="images/small/valhallpark_sm.jpg" alt="Valhallpark" style="width:100%;height:100%;">
         </p>
+        <p>Valhall park finner ni strax väster om Ängelholm. Hotellet ingår i Coops hotellerbjudande och finns beläget på den gamla flygflotiljens område brevid Ängelholms flygplats</p>
         <p><a target="_blank" class="btn btn-primary" href="http://hotelvalhallpark.se/" role="button">Hotellets Hemsida &raquo;</a></p>
         <p><a target="_blank" class="btn btn-primary" href="https://www.coophotellpremie.com/" role="button">Coop &raquo;</a></p>
         
       </div>
       <div class="col-sm-4">
-        <h2>Riverside Hotell</h2> 
-        <p>Mitt i centrum i hjärtat av ängelholm hittar man Riverside hotell. Här kan man völja att bo antigen i vanliga hotellrum eller så kan man dessutom välja lägenhet. Priser varierar efter efterfrågan men en sökning idag 10/4 får jag upp ett dubbelrum för 2 personer för 1280 SEK och en lägenhet för 4 personer för 1800 SEK</p>
+        <h2>Riverside Hotell</h2>
         <p>    
             <img class="logo visible-lg" src="images/large/riverside_lg.jpg" alt="Riverside" style="width:100%;height:100%;">
             <img class="logo visible-md" src="images/medium/riverside_md.jpg" alt="Riverside" style="width:100%;height:100%;">
             <img class="logo logo visible-sm logo visible-sm logo visible-sm visible-xs" src="images/small/riverside_sm.jpg" alt="Riverside" style="width:100%;height:100%;">
         </p>
+        <p>Mitt i centrum i hjärtat av ängelholm hittar man Riverside hotell. Här kan man välja att bo antigen i vanliga hotellrum eller så kan man dessutom välja lägenhet. Priser varierar efter efterfrågan men en sökning idag 10/4 får jag upp ett dubbelrum för 2 personer för 1280 SEK och en lägenhet för 4 personer för 1800 SEK</p>
         <p><a target="_blank" class="btn btn-primary" href="http://www.hotelriverside.se/" role="button">Hotellets Hemsida &raquo;</a></p>         
       </div>
       <div class="col-sm-4">
         <h2>Erikslund</h2>
-        <p>Erikslund ligger alldeles söder om Ängelholm, närmare bestämt vid den södra infarten från E6. Vill man göra sig extra fin inför festen, eller varför inte koppla av ordentligt efteråt, så kan man passa pa att ta en tur till hotellets egna SPA. Även detta hotell ingår i COOP:s hotelerbjudnde.</p>
         <p>    
             <img class="logo visible-lg" src="images/large/erikslund_lg.jpg" alt="Erikslund" style="width:100%;height:100%;">
             <img class="logo visible-md" src="images/medium/erikslund_md.jpg" alt="Erikslund" style="width:100%;height:100%;">
             <img class="logo logo visible-sm logo visible-sm logo visible-sm visible-xs" src="images/small/erikslund_sm.jpg" alt="Erikslund" style="width:100%;height:100%;">
         </p>
+        <p>Erikslund ligger alldeles söder om Ängelholm, närmare bestämt vid den södra infarten från E6. Vill man göra sig extra fin inför festen, eller varför inte koppla av ordentligt efteråt, så kan man passa pa att ta en tur till hotellets egna SPA. Även detta hotell ingår i COOP:s hotelerbjudnde.</p>
         <p><a target="_blank" class="btn btn-primary" href="http://www.hotellerikslund.se/sv" role="button">Hotellets Hemsida &raquo;</a></p> 
         <p><a target="_blank" class="btn btn-primary" href="https://www.coophotellpremie.com/" role="button">Coop &raquo;</a></p>
       </div>
@@ -118,32 +118,32 @@ function setMarkers(map) {
     <div class="row">
       <div class="col-sm-4">
         <h2>Margretetorp</h2>
-        <p>Margretetorp är det perfekta valet för den som vill ha krypavstånd hem från festen. Ett standard rum kan man få från 1400 kr per natt ifall man bokar på hotellets hemsida</p>
         <p>
             <img class="logo visible-lg" src="images/large/margretetorp_lg.jpg" alt="Margretetorp" style="width:100%;height:100%;">
             <img class="logo visible-md" src="images/medium/margretetorp_md.jpg" alt="Margretetorp" style="width:100%;height:100%;">
             <img class="logo logo visible-sm logo visible-sm logo visible-sm visible-xs" src="images/small/margretetorp_sm.jpg" alt="Margretetorp" style="width:100%;height:100%;">
         </p>
+        <p>Margretetorp är det perfekta valet för den som vill ha krypavstånd hem från festen. Ett standard rum kan man få från 1400 kr per natt ifall man bokar på hotellets hemsida</p>
         <p><a target="_blank" class="btn btn-primary" href="http://www.margretetorp.se/sv/hotell/boka-online.aspx" role="button">Hotellets Hemsida &raquo;</a></p>
       </div>
       <div class="col-sm-4">
         <h2>Hotell Lilton</h2> 
-        <p>Detta hotell finner ni på järnvägsgatan mitt i centrala Ängelholm, bara ett stenkast från kyrkan. Lilton är ett litet familjärt hotell inyst i ett sekelskifteshus</p>
         <p>    
             <img class="logo visible-lg" src="images/large/lilton_lg.jpg" alt="Lilton" style="width:100%;height:100%;">
             <img class="logo visible-md" src="images/medium/lilton_md.jpg" alt="Lilton" style="width:100%;height:100%;">
             <img class="logo logo visible-sm logo visible-sm visible-xs" src="images/small/lilton_sm.jpg" alt="Lilton" style="width:100%;height:100%;">
         </p>
+        <p>Detta hotell finner ni på järnvägsgatan mitt i centrala Ängelholm, bara ett stenkast från kyrkan. Lilton är ett litet familjärt hotell inyst i ett sekelskifteshus</p>
         <p><a target="_blank" class="btn btn-primary" href="http://www.hotel-lilton.se/" role="button">Hotellets Hemsida &raquo;</a></p>      
      </div>
       <div class="col-sm-4">
         <h2>Kvinnaböske Krog & Hotel</h2>
-        <p>Här är allt guld och gröna skogar. I fall man ska tro traktens kändis i alla fall. Dubbelrum från 1295 SEK</p>
         <p>
-            <img class="logo visible-lg" src="images/large/kvinnaboske_lg.jpg" alt="Margretetorp" style="width:100%;height:100%;">
-            <img class="logo visible-md" src="images/medium/kvinnaboske_md.jpg" alt="Margretetorp" style="width:100%;height:100%;">
-            <img class="logo logo visible-sm logo visible-sm visible-xs" src="images/small/kvinnaboske_sm.jpg" alt="Margretetorp" style="width:100%;height:100%;">
+            <img class="logo visible-lg" src="images/large/kvinnaboske_lg.jpg" alt="Kvinnaböske" style="width:100%;height:100%;">
+            <img class="logo visible-md" src="images/medium/kvinnaboske_md.jpg" alt="Kvinnaböske" style="width:100%;height:100%;">
+            <img class="logo logo visible-sm logo visible-sm visible-xs" src="images/small/kvinnaboske_sm.jpg" alt="Kvinnaböske" style="width:100%;height:100%;">
         </p>
+        <p>Här är allt guld och gröna skogar. I fall man ska tro traktens kändis i alla fall. Dubbelrum från 1295 SEK</p>
         <p><a target="_blank" class="btn btn-primary" href="http://www.kvinnaboske.se/" role="button">Hotellets Hemsida &raquo;</a></p> 
       </div>
     </div>
