Added house icon to contact pages

--- a/public/templates/contact.html
+++ b/public/templates/contact.html
@@ -3,7 +3,7 @@
   function initMapChurch() {
     
     //var iconBase = 'https://maps.google.com/mapfiles/kml/shapes/';
-    var myLatLng = {lat: 56.243424, lng: 12.860100};
+    var myLatLng = {lat: 56.239244, lng: 12.879137};
 
     var map = new google.maps.Map(document.getElementById('map'), {
         zoom: 13,
@@ -16,7 +16,7 @@
   
   // Data for the markers consisting of a name, a LatLng and a zIndex for the
   // order in which these markers should display on top of each other.
-  var houseIcon = 'images/parking.jpeg'
+  var houseIcon = 'images/HomeIcon.png'
 
   // Data for the markers consisting of a name, a LatLng and a zIndex for the
   // order in which these markers should display on top of each other.
