Added temp login skeleton

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,6 +45,11 @@
                         <a data-toggle="collapse" data-target=".navbar-collapse" data-ui-sref="home.contact">Kontakta Oss</a>
                     </li>
                 </ul>
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a data-toggle="collapse" data-target=".navbar-collapse" data-ui-sref="home.login">Logga In</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
@@ -84,6 +89,7 @@
     <script src="javascripts/app/controllers/partyController.js"></script>
     <script src="javascripts/app/controllers/startpageController.js"></script>
     <script src="javascripts/app/controllers/livingController.js"></script>
+    <script src="javascripts/app/controllers/loginController.js"></script>
     <!--Load filters-->
     <!--Load directives-->
 </body>
