Added signup form for front end

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,6 +42,11 @@
                 </ul>
                 <ul class="nav navbar-nav">
                     <li>
+                        <a data-toggle="collapse" data-target=".navbar-collapse" data-ui-sref="home.application">Anmälan</a>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav">
+                    <li>
                         <a data-toggle="collapse" data-target=".navbar-collapse" data-ui-sref="home.contact">Kontakta Oss</a>
                     </li>
                 </ul>
@@ -84,6 +89,7 @@
     <script src="javascripts/app/controllers/partyController.js"></script>
     <script src="javascripts/app/controllers/startpageController.js"></script>
     <script src="javascripts/app/controllers/livingController.js"></script>
+    <script src="javascripts/app/controllers/applicationController.js"></script>
     <!--Load filters-->
     <!--Load directives-->
 </body>
