Added backend and database for application

--- a/public/templates/application.html
+++ b/public/templates/application.html
@@ -86,7 +86,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-sm-12" width="100%>
+    <div class="col-sm-12">
         <br>
         <input class="btn btn-default btn-lg btn-block" type="submit" value="Skicka Anmälan" ng-click="vm.submitApplication()" ng-show="vm.num_users > 0">
         <br>
