--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -23,6 +23,9 @@
 					</fieldset>	
 				 	<button type="submit" class="btn btn-primary pull-center">Login</button>
 				  	</p>
+				  	<p class="text-danger">
+				  		{{$root.message}}
+				  	</p>
 				</form>
 			</div>
 		</div>
