--- a/public/templates/application.html
+++ b/public/templates/application.html
@@ -1,10 +1,13 @@
 <div class="row">
-    <input class="btn btn-default" type="submit" value="Lägg till deltagare" ng-click="vm.addUser()">
+    <p>
+    För att göra en anmälan lägger man till önskat antal deltagare med tillhörande information:
+    </p>
+    <input class="btn btn-primary" type="submit" value="Lägg till deltagare" ng-click="vm.addAttendee()">
     <br>
     <br>
 </div>
 <div class="row">
-    <div ng-repeat="user in vm.list_of_users track by $index">
+    <div ng-repeat="attendee in vm.list_of_attendees track by $index">
         <div class="clearfix" ng-if="($index-1)%3==2"></div>
             <div class="col-sm-3">
                 <div class="container">
@@ -15,70 +18,70 @@
                         <br>
                         <div class="form-group">
                             <label>Förnamn:</label>
-                            <input type="text" class="form-control" ng-model="user.firstname" name="firstname">
+                            <input type="text" class="form-control" ng-model="attendee.firstname" name="firstname">
                         </div>
                         <div class="form-group">
                             <label>Efternamn:</label>
-                            <input type="text" class="form-control" ng-model="user.lastname" name="lastname">
+                            <input type="text" class="form-control" ng-model="attendee.lastname" name="lastname">
                         </div>
                         <div class="form-group">
                             <label>E-post:</label>
-                            <input type="text" class="form-control" ng-model="user.email" name="email">
+                            <input type="text" class="form-control" ng-model="attendee.email" name="email">
                         </div>
                         <div class="form-inline">
                             <div class="radio">
                                 <label>
-                                    <input type="radio" name="optionsRadios" id="optionsRadios1" ng-model="user.attend" ng-value="true"> Kommer
+                                    <input type="radio" name="optionsRadios" id="optionsRadios1" ng-model="attendee.attend" ng-value="true"> Kommer
                                 </label>
                             </div>
                             <div class="radio">
                                 <label>
-                                    <input type="radio" name="optionsRadios" id="optionsRadios2" ng-model="user.attend" ng-value="false" checked="checked"> Kommer Inte
+                                    <input type="radio" name="optionsRadios" id="optionsRadios2" ng-model="attendee.attend" ng-value="false" checked="checked"> Kommer Inte
                                 </label>
                             </div>
                         </div>
                         <br>
-                        <div class="checkbox" ng-show="user.attend">
+                        <div class="checkbox" ng-show="attendee.attend">
                             <label>
-                                <input type="checkbox" ng-model="user.transfer">  Busstransfer till fest
+                                <input type="checkbox" ng-model="attendee.transfer">  Busstransfer till fest
                             </label>  
                         </div>
                         <div class="form-inline">
-                            <div class="checkbox" ng-show="user.attend">
+                            <div class="checkbox" ng-show="attendee.attend">
                                 <label>
                                     <input type="checkbox" ng-model="checked">  Specialkost
                                 </label>  
                             </div>
                             <br>
-                            <div class="checkbox" ng-show="checked && user.attend">
+                            <div class="checkbox" ng-show="checked && attendee.attend">
                                 <label>
-                                    <input type="checkbox" ng-model="user.special_food.laktos">  Laktos
+                                    <input type="checkbox" ng-model="attendee.special_food.laktos">  Laktos
                                 </label>  
                             </div>
-                            <div class="checkbox" ng-show="checked && user.attend">
+                            <div class="checkbox" ng-show="checked && attendee.attend">
                                 <label>  
-                                    <input type="checkbox" ng-model="user.special_food.glukose">  Gluten
+                                    <input type="checkbox" ng-model="attendee.special_food.glukose">  Gluten
                                 </label>
                             </div>
-                            <div class="checkbox" ng-show="checked && user.attend">
+                            <div class="checkbox" ng-show="checked && attendee.attend">
                                 <label> 
-                                    <input type="checkbox" ng-model="user.special_food.nuts">  Nötter
+                                    <input type="checkbox" ng-model="attendee.special_food.nuts">  Nötter
                                 </label>
                             </div>
-                            <div class="checkbox" ng-show="checked && user.attend">
+                            <div class="checkbox" ng-show="checked && attendee.attend">
                                 <label> 
-                                    <input type="checkbox" ng-model="user.special_food.vegetarian">  Vegetarisk
+                                    <input type="checkbox" ng-model="attendee.special_food.vegetarian">  Vegetarisk
                                 </label>
                             </div>
                         </div>
                         <br>
-                        <div class="form-group" ng-show="checked && user.attend">
+                        <div class="form-group" ng-show="checked && attendee.attend">
                             <label>Annat:</label>
-                            <input type="text" class="form-control" ng-model="user.special_food.other" name="other"> 
+                            <input type="text" class="form-control" ng-model="attendee.special_food.other" name="other"> 
                         </div>
                     </form>
                 </div>
-                <button class="btn btn-md btn-primary btn-block" type="button" ng-click="vm.removeUser(user)">Ta Bort
+                <button class="btn btn-md btn-primary btn-block" type="button" ng-click="vm.removeAttendee(attendee)">Ta Bort
                     <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                 </button>
             </div>
@@ -88,7 +91,7 @@
 <div class="row">
     <div class="col-sm-12">
         <br>
-        <input class="btn btn-default btn-lg btn-block" type="submit" value="Skicka Anmälan" ng-click="vm.submitApplication()" ng-show="vm.num_users > 0">
+        <input class="btn btn-default btn-lg btn-block" type="submit" value="Spara Anmälan" ng-click="vm.submitApplication()" ng-show="vm.num_attendees > 0">
         <br>
         <br>
     </div>
