Fixed resize issue in fotter and dobule size send application button

--- a/public/templates/main.html
+++ b/public/templates/main.html
@@ -49,8 +49,10 @@
         </div>
     </div>
     <div class="row" id="footer">
-        <hr />
-        <p class="text-left">&copy; Emil o Matildas Bröllopssida - 2016</p>
+        <div class="col-sm-12 col-md-12 col-lg-12">
+            <hr>
+             <p>&copy; Emil o Matildas Bröllopssida - 2016</p>
+        </div>
     </div>
 
 </div>
