--- a/public/templates/application.html
+++ b/public/templates/application.html
@@ -13,7 +13,7 @@
                 <div class="container">
                     <form class="form-horizontal" ng-submit="apply()">
                         <div class="form-group">
-                            <h3>Person {{$index+1}}:
+                            <h3>Deltagare {{$index+1}}:
                             <button id="editApplication" class="btn btn-sm pull-right" ng-class="{true: 'btn-custom', false: 'btn-custom'}[!attendee.editMode]" ng-click="vm.editAttendee(attendee)">
                             Ändra <span ng-if="!attendee.editMode" class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
                             <span ng-if="attendee.editMode" class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
