--- a/public/templates/thanks.html
+++ b/public/templates/thanks.html
@@ -6,7 +6,7 @@
 		<br>
 		<h3>Tack för din anmälan!</h3>
 		<br>
-		<p>I din anmälan har du angivit att det kommer {{(vm.num_attendees > 1) ? vm.num_attendees + ' personer':vm.num_attendees + ' person'}} på bröllopet
+		<p>I din anmälan har du angivit att det kommer {{(vm.user.num_participants > 1 || vm.user.num_participants === 0) ? vm.user.num_participants + ' personer':vm.user.num_participants + ' person'}} på bröllopet
 		<p>
 		Ifall du angav en e-post adress i din anmälan kommer du inom kort få ett mail med alla detaljer. 
 		</p>
